add cause route and fix documentation
